--- a/charlie/web/index.html
+++ b/charlie/web/index.html
@@ -8,6 +8,9 @@
     <title>AI-SQL</title>
 
     <!-- Bootsrap -->
+
+
+    <script type="text/javascript" src="/eel.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
@@ -71,19 +74,30 @@
 
 
 
-    <script type="text/javascript" src="/eel.js"></script>
+
+    <!--Jquery  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-    <script src="main.js"></script>
+    <!-- Particle js -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
     <script src="script.js"></script>
-    <script src="assests/vendore/texllate/jquery.fittext.js"></script>
-    <script src="http://jschr.github.io/textillate/jquery.textillate.js"></script>
-    <script src="assests/vendore/texllate/jquery.lettering.js"></script>
+
+    <!-- Siri wave -->
     <script src="https://unpkg.com/siriwave/dist/siriwave.umd.min.js"></script>
+
+    <!-- Texllate js -->
+    <script src="assests/vendore/texllate/jquery.fittext.js"></script>
+    <script src="assests/vendore/texllate/jquery.lettering.js"></script>
+    <script src="http://jschr.github.io/textillate/jquery.textillate.js"></script>
+
+    <!-- lottie files -->
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script type="text/javascript" src="/eel.js"></script>
+    <script src="main.js"></script>
     <script src="controller.js"></script>
 
 
