--- a/charlie/tp/index.html
+++ b/charlie/tp/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PyWebview Example</title>
+    <title>Simple Interaction</title>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
+        button { padding: 10px 20px; font-size: 18px; cursor: pointer; }
+    </style>
 </head>
-
 <body>
-    <h1 id="message">Waiting for Python to send a message...</h1>
+    <h1>Change Background Color</h1>
+    <button onclick="changeBackgroundColor()">Click Me!</button>
 
-    <script type="text/javascript">
-        // Ensure pywebview API is loaded when window is loaded
-        window.onload = function() {
-            pywebview.api.get_message().then(function(message) {
-                document.getElementById('message').innerText = message;
-            }).catch(function(error) {
-                console.error("Error in calling Python function:", error);
-            });
-        }
+    <script>
+        
+        // Function to call Python function to change the background color
+        function changeBackgroundColor() {
+            window.pywebview.api.change_background_color().then(style => {
+            document.body.style = style;
+    });
+}
+
     </script>
 </body>
-
 </html>
