--- a/charlie/web/index.html
+++ b/charlie/web/index.html
@@ -94,7 +94,7 @@
                         <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
                             <div class="">
 
-                                <p class="text-start text-light mb-4 siri-message">Hello I am Charliee</p>
+                                <div><p class="text-start text-light mb-4 siri-message">Hello i am charlie!</p></div>
                                 <div id="siri-container"></div>
 
 
